# Ann_Retrievial

./: CMakeLists.txt
data/fvecs_reader/: fvecs_reader.h
libraries/dataset/: Dataset.cpp  Dataset.h
libraries/distances/: distances.cpp  distances.h
libraries/fvecs_reader/: fvecs_reader.cpp  fvecs_reader.h
libraries/kNN/: kNN.cpp  kNN.h
src/: main.cpp  test_accuracy.cpp  test_fvecs_reader.cpp  test_sequential.cpp
